# FCN_2020

./: .gitignore  Dockerfile.cpu  README.md  entrypoint.sh
fcn_2020/: README.md  pyproject.toml
fcn_2020/src/fcn_2020/: __init__.py  fcn.py  main.py  model_weights.pth  utils.py
fcn_2020/src/fcn_2020.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
